--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 TimeSeries/.Rhistory
 
 TimeSeries/.RData
+.Rproj.user
+
+Textmining/tag_analysis/.gatoken
+
+Textmining/tag_analysis/.Rhistory
+
+Textmining/tag_analysis/.RData
